feat(data-1150): update GTFS-RT filtering by routeId for Alert feeds
* for each Alert.informedEntity, try to find routeId based on informedEntity.trip.tripId (by looking into GTFS th) then (if trip.tripId is missing) by informedEntity.trip.routeId then (if trip.routeId is missing) by informedEntity.routeId
* if routeId does not belong to DATASET then discard this informedEntity
* if produced SIRI SX message has zero affected entities, then discard it